// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - login failed 1`] = `
<WithStyles(ForwardRef(Container))
  component="main"
  maxWidth="xs"
>
  <WithStyles(CssBaseline) />
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <div
    className="makeStyles-paper-3"
  >
    <WithStyles(ForwardRef(Avatar))
      className="makeStyles-avatar-7"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      variant="h5"
    >
      Login
    </WithStyles(ForwardRef(Typography))>
    <p>
      Login failed
    </p>
    <form
      className="makeStyles-form-5"
      noValidate={true}
      onSubmit={[Function]}
    >
      <WithStyles(ForwardRef(TextField))
        autoComplete="email"
        fullWidth={true}
        id="email"
        label="Email Address"
        margin="normal"
        name="email"
        required={true}
        variant="outlined"
      />
      <WithStyles(ForwardRef(TextField))
        autoComplete="current-password"
        fullWidth={true}
        id="password"
        label="Password"
        margin="normal"
        name="password"
        required={true}
        type="password"
        variant="outlined"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-submit-6"
        color="primary"
        fullWidth={true}
        type="submit"
        variant="contained"
      >
        Log in
      </WithStyles(ForwardRef(Button))>
    </form>
  </div>
</WithStyles(ForwardRef(Container))>
`;

exports[`renders correctly 1`] = `
<WithStyles(ForwardRef(Container))
  component="main"
  maxWidth="xs"
>
  <WithStyles(CssBaseline) />
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <div
    className="makeStyles-paper-3"
  >
    <WithStyles(ForwardRef(Avatar))
      className="makeStyles-avatar-7"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      variant="h5"
    >
      Login
    </WithStyles(ForwardRef(Typography))>
    <form
      className="makeStyles-form-5"
      noValidate={true}
      onSubmit={[Function]}
    >
      <WithStyles(ForwardRef(TextField))
        autoComplete="email"
        fullWidth={true}
        id="email"
        label="Email Address"
        margin="normal"
        name="email"
        required={true}
        variant="outlined"
      />
      <WithStyles(ForwardRef(TextField))
        autoComplete="current-password"
        fullWidth={true}
        id="password"
        label="Password"
        margin="normal"
        name="password"
        required={true}
        type="password"
        variant="outlined"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-submit-6"
        color="primary"
        fullWidth={true}
        type="submit"
        variant="contained"
      >
        Log in
      </WithStyles(ForwardRef(Button))>
    </form>
  </div>
</WithStyles(ForwardRef(Container))>
`;
